<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.novelrt</groupId>
  <artifactId>NovelRT.Java</artifactId>
  <version>0.1-SNAPSHOT</version>

  <name>NovelRT Java API</name>
  <url>https://github.com/novelrt/NovelRT</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>14</java.version>
    <!--
      Those properties are passed in by CMake using
      -D arguments.
    -->
    <novelrtRoot>${novelrtRoot}</novelrtRoot>
    <novelrtOutput>${novelrtOutput}</novelrtOutput>
    <novelrtClassOutput>${novelrtClassOutput}</novelrtClassOutput>
  </properties>

  <build>
    <directory>${novelrtOutput}</directory>
    <outputDirectory>${novelrtClassOutput}</outputDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>${java.version}</release>
          <compilerVersion>${java.version}</compilerVersion>
          <compilerArgs>
            <arg>--enable-preview</arg>
            <!-- disabled: we don't need them, thanks to jni.hpp.
            <arg>-h</arg>
            <arg>${novelrtRoot}/include/NovelRT/Java</arg>
            -->
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
